# experimental_platform

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.exp.yml  folder_structure.txt  pyproject.toml  spark-defaults.conf
configs/: dev.yaml
data/memos/: exp_big_exp_run.md  exp_checkout_button_001.md  exp_precision_large_n.md  exp_precision_long_run.md  exp_precision_short_run.md  exp_precision_small_n.md  exp_pricing_test_003.md
docker/runner/: Dockerfile
docs/: 00_run_instructions.md  01_architecture.md  02_logging_to_iceberg.md  03_metrics_layer.md  04_project_skeleton.md  05_ab_inference.md  06_cuped.md  07_causal_inference_did.md  08_statistical_validation.md  09_experiment_scenarios.md  10_decision_memo_template.md  11_memo_asis_exp_add_cart_002.md  12_memo_exp_checkout_button_001.md  productization.md
exp_platform/: config.py  generate_synth.py  memo.py  schemas.py
exp_platform/causal/: did.py
exp_platform/io/: analysis_results.py  analysis_writer.py  paths.py
exp_platform/metrics/: definitions.py
exp_platform/pipelines/: analyze_experiment.py  analyze_experiment_bk.py  analyze_experiment_cuped.py  analyze_experiment_cuped_bk.py  analyze_experiment_did.py  analyze_experiment_did_bk.py  compute_metric_aggregates.py  did_pretrends.py  (+9 more)
notebooks/: 00_check_data.ipynb  01_platform_AB_validation.ipynb  02_platform_CUPED_validation.ipynb  03_platform_DiD_pretrends_assumption.ipynb  04_platform_DiD_validation.ipynb  05_platform_experiment_regimes.ipynb
schemas/: experiment_registry.schema.json  exposure.schema.json  outcomes.schema.json
(+10 files in other folders)
